####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = callbacks.h dataview.h eventview.h interface.h options.h outputview.h scene.h sceneview.h screamernode.h screamerview.h support.h win32screamernode.h unixscreamernode.h 

####### kdevelop will overwrite this part!!! (end)############
