####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = solarcell

## INCLUDES were found outside kdevelop specific part

solarcell_SOURCES = Win32ScreamerNode.cpp UnixScreamerNode.cpp support.cpp ScreamerView.cpp ScreamerNode.cpp SceneView.cpp Scene.cpp OutputView.cpp Options.cpp interface.cpp EventView.cpp DataView.cpp callbacks.cpp main.cpp 
solarcell_LDADD   = 


EXTRA_DIST = main.cpp callbacks.cpp DataView.cpp EventView.cpp interface.cpp Options.cpp OutputView.cpp Scene.cpp SceneView.cpp ScreamerNode.cpp ScreamerView.cpp support.cpp UnixScreamerNode.cpp Win32ScreamerNode.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
solarcell_LDFLAGS = $(all_libraries) 
                                                                                
